# assignment

./: .gitignore  README.md  manage.py  pyproject.toml  pytest.ini  requirement.md
Project/: asgi.py  elasticsearch_client.py  exceptions.py  middleware.py  mixins.py  routing.py  settings.py  tests_exceptions.py  urls.py
customers/: admin.py  backends.py
script/: load_dummy_items.py  setup.py
shared_app/: apps.py  consumers.py  models.py  serializers.py  urls.py  views.py
shared_app/tests/: test_cors.py
shell/: cleanup.sh  setup.sh
tenant_app/: apps.py  documents.py  models.py  tests.py  urls.py  views.py
tenant_app/management/commands/: rebuild.py
tenant_app/templates/tenant_app/: catalog.html
